# backend/docs/swagger.yaml
@@ -76,6 +76,14 @@ definitions:
       userID:
         type: integer
     type: object
+  models.CheckEmailDuplicateResponse:
+    properties:
+      data: {}
+      error:
+        type: boolean
+      message:
+        type: string
+    type: object
   models.GetAllBookmarksResponse:
     properties:
       data: {}
@@ -375,6 +383,29 @@ paths:
           schema:
             $ref: '#/definitions/models.AddUserResponse'
       summary: UserID를 사용해 유저 1명 정보 읽기
+      tags:
+      - user
+  /api/v1/user/check-email/:
+    get:
+      description: 입력한 이메일을 사용하는 유저가 있다면 Body의 Message로 "True" 반환, 없다면 "False" 반환.
+      parameters:
+      - description: 중복 체크 할 이메일 주소 입력. 최대 길이 50자 제한.
+        in: query
+        name: email
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.CheckEmailDuplicateResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.CheckEmailDuplicateResponse'
+      summary: 이메일 중복 체크.
       tags:
       - user
 swagger: "2.0"
